# chat-backend

./: .env.example  .gitignore  Cargo.toml  justfile
src/: auth.rs  http.rs  jwt.rs  main.rs  pubsub.rs  storage.rs  util.rs
src/graphql/: guild.rs  loaders.rs  manage.rs  message.rs  mod.rs  user.rs
src/model/: audit.rs  guild.rs  message.rs  mod.rs  user.rs
