[package]
name = "netherite-chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-dup = "1.2.2"
async-graphql = { version = "5.0.9", features = ["log"] }
async-graphql-tide = "5.0.9"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-stream = "0.3.5"
async-trait = "0.1.68"
async-tungstenite = "0.22.2"
base64 = "0.21.2"
bcrypt = "0.14.0"
bitflags = { version = "2.3.1", features = ["serde"] }
chrono = "0.4.24"
derive_more = "0.99.17"
dotenv = "0.15.0"
flo_stream = "0.7.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
itertools = "0.10.5"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["chrono"] }
sha1 = "0.10.5"
surrealdb = { version = "1.0.0-beta.9" }
tide = "0.16.0"
tide-jwt = "0.1.1"
tide-websockets = "0.4.0"
tokio = { version = "1.28.1", features = ["macros"] }
unindent = "0.2.1"
validator = { version = "0.16.0", features = ["derive"] }
